<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@drawable/bcg_5">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txtv_intro"
        android:id="@+id/textView"
        android:textSize="50sp"
        android:textColor="#ff000000"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyright"
        android:id="@+id/textView3"
        android:textSize="23sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:id="@+id/linearLayout"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true">

        <Button
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_music"
            android:id="@+id/button"
            android:layout_gravity="center"
            android:onClick="audioplayer"
            android:layout_marginRight="5dp"
            />

        <Button
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_online"
            android:id="@+id/button3"
            android:layout_gravity="center"
            android:onClick="goOnline" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:id="@+id/linearLayout2"
        android:layout_below="@+id/linearLayout"
        android:layout_alignLeft="@+id/linearLayout"
        android:layout_alignStart="@+id/linearLayout">

        <Button
            android:layout_marginLeft="17dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_video"
            android:id="@+id/button2"
            android:layout_gravity="center"
            android:onClick="videoplayer" />

        <Button
            android:layout_marginLeft="22dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_stream"
            android:id="@+id/button4"
            android:layout_gravity="center"
            android:onClick="streamOnline"
            android:layout_marginRight="11dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="110dp"
        android:orientation="horizontal"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:id="@+id/linearLayout3"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignLeft="@+id/linearLayout2"
        android:layout_alignStart="@+id/linearLayout2">

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_exit"
        android:id="@+id/button5"
        android:onClick="exitapp"
        android:layout_gravity="center"
        android:layout_below="@+id/linearLayout2"
        android:layout_centerHorizontal="true" />
    </LinearLayout>


</RelativeLayout>
